--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -12,49 +12,40 @@ const menuitems = [
     title: "Household Appliance Services",
     path: "/services/commercial-and-household",
     children: [
-      { title: "Refrigerator Repair", path: "/services/refrigerator-repair" },
-      { title: "Freezer Repair", path: "/services/freezer-repair" },
-      { title: "Washing Machine Repair", path: "/services/washing-machine-repair"},
-      { title: "Dryer Repair", path: "/services/dryer-repair" },
-      { title: "Stove Repair", path: "/services/stove-repair" },
-      { title: "Range Repair", path: "/services/range-repair" },
-      { title: "Dishwasher Repair", path: "/services/dishwasher-repair" },
-      { title: "Oven Repair", path: "/services/oven-repair" },
-      { title: "Cooktop Repair", path: "/services/cooktop-repair" },
-      { title: "Microwave Repair", path: "/services/microwave-repair" },
-      { title: "Range Hood Repair", path: "/services/range-hood-repair" },
-      { title: "Fireplace Repair", path: "/services/fireplace-repair" },
-      { title: "BBQ Grill Repair", path: "/services/bbq-grill-repair" },
-      { title: "Wine Cooler Repair", path: "/services/wine-cooler-repair" },
-      { title: "Wine Cellar Repair", path: "/services/wine-cellar-repair" },
-      { title: "Induction Cooktop Repair", path: "/services/induction-cooktop-repair" },
-      { title: "Furnace Repair", path: "/services/furnace-repair" },
-      { title: "Bar Refrigerator Repair", path: "/services/bar-refrigerator-repair" },
+      { title: "Refrigerator Repair", path: "/services/refrigerator-repair-los-angeles" },
+      { title: "Freezer Repair", path: "/services/freezer-repair-los-angeles" },
+      { title: "Washing Machine Repair", path: "/services/washing-machine-repair-los-angeles"},
+      { title: "Dryer Repair", path: "/services/dryer-repair-los-angeles" },
+      { title: "Stove Repair", path: "/services/stove-repair-los-angeles" },
+      { title: "Range Repair", path: "/services/range-repair-los-angeles" },
+      { title: "Dishwasher Repair", path: "/services/dishwasher-repair-los-angeles" },
+      { title: "Oven Repair", path: "/services/oven-repair-los-angeles" },
+      { title: "Cooktop Repair", path: "/services/cooktop-repair-los-angeles" },
+      { title: "Microwave Repair", path: "/services/microwave-repair-los-angeles" },
+      { title: "Range Hood Repair", path: "/services/range-hood-repair-los-angeles" },
+      { title: "Fireplace Repair", path: "/services/fireplace-repair-los-angeles" },
+      { title: "BBQ Grill Repair", path: "/services/bbq-grill-repair-los-angeles" },
+      { title: "Wine Cooler Repair", path: "/services/wine-cooler-repair-los-angeles" },
+      { title: "Wine Cellar Repair", path: "/services/wine-cellar-repair-los-angeles" },
+      { title: "Induction Cooktop Repair", path: "/services/induction-cooktop-repair-los-angeles" },
+      { title: "Furnace Repair", path: "/services/furnace-repair-los-angeles" },
+      { title: "Bar Refrigerator Repair", path: "/services/bar-refrigerator-repair-los-angeles" },
     ],
   },
   {
     title: "Commercial Appliance Services",
     path: "/services/commercial-and-household",
     children: [
-      {
-        title: "Commercial Refrigerator Repair",
-        path: "/services/commercial-refrigerator-repair-los-angeles",
-      },
-      {
-        title: "Commercial Freezer Repair",
-        path: "/services/commercial-freezer-repair",
-      },
-      {
-        title: "Commercial Dishwasher Repair",
-        path: "/services/commercial-dishwasher-repair",
-      },
-      {title: "Commercial Dryer Repair", path: "/services/commercial-dryer-repair"},
-      {title: "Commercial Oven Repair", path: "/services/commercial-oven-repair"},
-      {title: "Commercial Showcase Refrigerator Repair", path: "/services/commercial-showcase-refrigerator-repair"},
-      {title: "Commercial Walk in Cooler Repair", path: "/services/commercial-walk-in-cooler-repair"},
-      {title: "Commercial Walk in Freezer  Repair", path: "/services/commercial-freezer-in-cooler-repair"},
-      {title: "Commercial Ice Machine Repair", path: "/services/commercial-ice-machine-repair"},
-      {title: "Commercial Slushie Machine Repair", path: "/services/commercial-slushie-machine-repair"},
+      {title: "Commercial Refrigerator Repair",path: "/services/commercial-refrigerator-repair-los-angeles"},
+      {title: "Commercial Freezer Repair", path: "/services/commercial-freezer-repair-los-angeles"},
+      {title: "Commercial Dishwasher Repair", path: "/services/commercial-dishwasher-repair-los-angeles"},
+      {title: "Commercial Dryer Repair", path: "/services/commercial-dryer-repair-los-angeles"},
+      {title: "Commercial Oven Repair", path: "/services/commercial-oven-repair-los-angeles"},
+      {title: "Commercial Showcase Refrigerator Repair", path: "/services/commercial-showcase-refrigerator-repair-los-angeles"},
+      {title: "Commercial Walk in Cooler Repair", path: "/services/commercial-walk-in-cooler-repair-los-angeles"},
+      {title: "Commercial Walk in Freezer  Repair", path: "/services/commercial-freezer-in-cooler-repair-los-angeles"},
+      {title: "Commercial Ice Machine Repair", path: "/services/commercial-ice-machine-repair-los-angeles"},
+      {title: "Commercial Slushie Machine Repair", path: "/services/commercial-slushie-machine-repair-los-angeles"},
     ],
   },
 
