--- a/src/components/units-appliances-los-angeles.astro
+++ b/src/components/units-appliances-los-angeles.astro
@@ -8,7 +8,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="content-machinery-f-d">
       <a
         title="Refrigerator Repair Los Angeles"
-        href="/services/refrigerator-repair">
+        href="/services/refrigerator-repair-los-angeles">
         <div class="f-content-machinery">
           <img loading="lazy" src="/units/refrigerator-repair.webp" alt="Same day expert refrigerator repair - Los Angeles" />
         </div>
@@ -25,16 +25,17 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/refrigerator-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/refrigerator-repair-cost">ESTIMATES</a>
     </div>
 
   </div>
+
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
       <a
         title="Refrigerator Repair Los Angeles"
-        href="/services/freezer-repair">
+        href="/services/freezer-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -55,7 +56,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/freezer-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/freezer-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
@@ -65,7 +66,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="content-machinery-f-d">
       <a
         title="Refrigerator Repair Los Angeles"
-        href="/services/washing-machine-repair">
+        href="/services/washing-machine-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -93,7 +94,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Refrigerator Repair Los Angeles" href="/services/dryer-repair">
+      <a title="Refrigerator Repair Los Angeles" href="/services/dryer-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -114,24 +115,24 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/dryer-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/dryer-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Stove Repair Los Angeles" href="/services/stove-repair">
+      <a title="Stove Repair Los Angeles" href="/services/stove-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
             src="/units/range-stove-repair.webp"
-            alt="Range repair Los Angeles / Stove repair Los Angeles"
+            alt="Stove repair Los Angeles"
           />
         </div>
 
         <div class="d-content-machinery">
-          <p>Range/Stove Repair</p>
+          <p>Stove Repair</p>
         </div>
       </a>
     </div>
@@ -142,7 +143,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/stove-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/stove-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
@@ -152,7 +153,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="content-machinery-f-d">
       <a
         title="Dishwasher Repair Los Angeles"
-        href="/services/dishwasher-repair">
+        href="/services/dishwasher-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -173,7 +174,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/dishwasher-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/dishwasher-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
@@ -181,7 +182,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Oven Repair Los Angeles" href="/services/oven-repair">
+      <a title="Oven Repair Los Angeles" href="/services/oven-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -201,7 +202,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/oven-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/oven-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
@@ -209,7 +210,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Cooktop Repair Los Angeles" href="/services/cooktop-repair">
+      <a title="Cooktop Repair Los Angeles" href="/services/cooktop-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -230,16 +231,15 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/cooktop-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/cooktop-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
 
 
-
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Microwave Repair Los Angeles" href="/services/microwave-repair">
+      <a title="Microwave Repair Los Angeles" href="/services/microwave-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -260,7 +260,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/microwave-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/microwave-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
@@ -270,7 +270,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="content-machinery-f-d">
       <a
         title="Range Hood Repair Los Angeles"
-        href="/services/range-hood-repair">
+        href="/services/range-hood-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -291,7 +291,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/range-hood-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/range-hood-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
@@ -299,7 +299,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Fireplace Repair Los Angeles" href="/services/fireplace-repair">
+      <a title="Fireplace Repair Los Angeles" href="/services/fireplace-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -320,7 +320,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/fireplace-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/fireplace-repair-cost">ESTIMATES</a>
     </div>
 
   </div>
@@ -329,7 +329,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Fireplace Repair Los Angeles" href="/services/bbq-grill-repair">
+      <a title="Fireplace Repair Los Angeles" href="/services/bbq-grill-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -350,7 +350,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/bbq-grill-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/bbq-grill-repair-cost">ESTIMATES</a>
     </div>
 
   </div>
@@ -359,7 +359,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Wine Cooler Repair in Los Angeles" href="/services/wine-cooler-repair">
+      <a title="Wine Cooler Repair in Los Angeles" href="/services/wine-cooler-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -379,14 +379,14 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/wine-cooler-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/commercial-wine-cooler-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Wine Cellar Repair in Los Angeles" href="/services/wine-cellar-repair">
+      <a title="Wine Cellar Repair in Los Angeles" href="/services/wine-cellar-repair-los-angeles">
         <div class="f-content-machinery">
           <img
           loading="lazy"
@@ -407,7 +407,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/wine-cellar-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/wine-cellar-repair-los-angeles">ESTIMATES</a>
     </div>
   </div>
 
@@ -415,7 +415,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Induction Cooktop Repair in Los Angeles" href="/services/induction-cooktop-repair">
+      <a title="Induction Cooktop Repair in Los Angeles" href="/services/induction-cooktop-repair-los-angeles">
         <div class="f-content-machinery">
           <img
           loading="lazy"
@@ -436,7 +436,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/induction-cooktop-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/induction-cooktop-repair-los-angeles">ESTIMATES</a>
     </div>
   </div>
 
