--- a/src/components/css-components/style-units-equipment-los-angeles.css
+++ b/src/components/css-components/style-units-equipment-los-angeles.css
@@ -97,8 +97,8 @@
 .d-content-machinery {
     width: 100%;
     display: grid;
-    min-height: 50px;
-    margin-top: 7px;
+    min-height: 72px;
+    /* margin-top: 7px; */
 }
 
 .d-content-machinery p {
