--- a/src/pages/services/refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/refrigerator-repair-los-angeles.astro
@@ -11,7 +11,7 @@ import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
 
-import "css/service/style_services.css";
+import "css/service/style_services-test.css";
 ---
 
 <Navbar />
@@ -20,21 +20,52 @@ import "css/service/style_services.css";
   <Container>
     <main>
       <div class="page-header">
+
         <div class="page-header-d-full">
           <div class="page-header-d">
             <h1>
-              <span class="animate-charcter"> <p>Refrigerator Repair Los Angeles</p> <p>and Nearby Areas</p></span>
+              <span class="animate-charcter">Refrigerator Repair Los Angeles and Nearby Areas</span>
             </h1>
           </div>
-          <Contactbtn />
         </div>
 
         <div class="page-header-f">
+
+          <div class="page-header-f-rel">
           <img
             src="/freezer/freezer-page_header_photos.webp"
             alt="Refrigerator Repair"
             loading="lazy"/>
+          </div>
+
+          <div class="page-header-f-gradient">
+          </div>
+
         </div>
+
+        <div class="page-header-p-full">
+          <div class="page-header-p">
+          <p> Having problems with your refrigerator? We are definitely the best
+            team to fix it, and we will solve all your appliance related
+            problems! Why do we claim to be the best? It is not just us. Our
+            well pleased customers, who call us back and keep recommending us
+            to their friends and family, are proof of our quality refrigerator
+            repair services. If you search for refrigerator repair Los
+            Angeles, you will find many appliance repair companies that
+            promise to deliver, and not many of them actually do.</p>
+          <p>To protect our customers, we ensure that our repairmen undergo
+            extensive training in refrigerator repairs, installation, and
+            maintenance. We also strive to protect our customers by being an
+            insured and licensed appliance repair company with a warranty.
+            Providing a warranty gives our clients peace of mind, and they can
+            call us back with a refrigerator issue within three months after
+            the repair. Repairing your refrigerator is as important to us as
+            it is to you. We strive to provide the absolutely best services in
+            repairing your refrigerator. Which is why we promise a full refund
+            if we cannot repair it.</p>
+          </div>
+        </div>
+
       </div>
     </main>
 
@@ -154,28 +185,8 @@ import "css/service/style_services.css";
         <div class="page213-content" id="left-menu-1">
           <div class="content__page-desc">
             <p>
-              Having problems with your refrigerator? We are definitely the best
-              team to fix it, and we will solve all your appliance related
-              problems! Why do we claim to be the best? It is not just us. Our
-              well pleased customers, who call us back and keep recommending us
-              to their friends and family, are proof of our quality refrigerator
-              repair services. If you search for refrigerator repair Los
-              Angeles, you will find many appliance repair companies that
-              promise to deliver, and not many of them actually do.
-            </p>
-            <br />
-            <p>
-              To protect our customers, we ensure that our repairmen undergo
-              extensive training in refrigerator repairs, installation, and
-              maintenance. We also strive to protect our customers by being an
-              insured and licensed appliance repair company with a warranty.
-              Providing a warranty gives our clients peace of mind, and they can
-              call us back with a refrigerator issue within three months after
-              the repair. Repairing your refrigerator is as important to us as
-              it is to you. We strive to provide the absolutely best services in
-              repairing your refrigerator. Which is why we promise a full refund
-              if we cannot repair it.
-            </p>
+             форма 
+          </p>
           </div>
         </div>
 
