--- a/src/pages/services/freezer-repair-los-angeles.astro
+++ b/src/pages/services/freezer-repair-los-angeles.astro
@@ -9,7 +9,7 @@ import Reviews from "@components/reviews.astro";
 import Arrow from "@components/js/arrow-phone.astro";
 import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
-import LogoBrands from "@components/js/logo-brands.astro";
+// import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/service/style_services.css";
 ---
@@ -2524,4 +2524,33 @@ import "css/service/style_services.css";
   <Focus />
   <Faqs />
 </Layout>
-<LogoBrands />
+<!-- <LogoBrands /> -->
+
+<script>
+  for (let i = 1; i <= 20; i++) {
+      const logoBranPh = document.querySelector(`.logo-bran-ph-${i}`);
+      const logoBranDLink = document.querySelector(`.logo-bran-d-${i} a`);
+
+      logoBranPh.addEventListener('mouseover', function() {
+          logoBranDLink.classList.add('hovered');
+          logoBranPh.classList.add('hovered');
+      });
+
+      logoBranPh.addEventListener('mouseout', function() {
+          logoBranDLink.classList.remove('hovered');
+          logoBranPh.classList.remove('hovered');
+      });
+
+      const logoBranD = document.querySelector(`.logo-bran-d-${i}`);
+
+      logoBranD.addEventListener('mouseover', function() {
+          logoBranPh.querySelector('img').classList.add('hovered');
+          logoBranPh.classList.add('hovered');
+      });
+
+      logoBranD.addEventListener('mouseout', function() {
+          logoBranPh.querySelector('img').classList.remove('hovered');
+          logoBranPh.classList.remove('hovered');
+      });
+  }
+</script>
