--- a/src/components/js/logo-brands.astro
+++ b/src/components/js/logo-brands.astro
@@ -1,4 +1,4 @@
-<script>
+<script defer>
   for (let i = 1; i <= 30; i++) {
       const logoBranPh = document.querySelector(`.logo-bran-ph-${i}`);
       const logoBranDLink = document.querySelector(`.logo-bran-d-${i} a`);
