--- a/src/pages/services/freezer-repair-los-angeles.astro
+++ b/src/pages/services/freezer-repair-los-angeles.astro
@@ -9,7 +9,7 @@ import Reviews from "@components/reviews.astro";
 import Arrow from "@components/js/arrow-phone.astro";
 import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
-// import LogoBrands from "@components/js/logo-brands.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/service/style_services.css";
 ---
@@ -2524,5 +2524,5 @@ import "css/service/style_services.css";
   <Focus />
   <Faqs />
 </Layout>
-<!-- <LogoBrands /> -->
+<LogoBrands />
 
