--- a/src/pages/services/commercial-freezer-repair-los-angeles.astro
+++ b/src/pages/services/commercial-freezer-repair-los-angeles.astro
@@ -14,7 +14,7 @@ import "css/service/style_services.css";
 
 <Navbar />
 <Reviews />
-<Layout title="Same Day Commercial Freezer Repair Call: (424) 325-0520">
+<Layout title="Same Day Commercial Freezer Repair Los Angeles">
   <Container>
     <main>
       <h1>
