--- a/src/pages/services/commercial-ice-machine-repair-los-angeles.astro
+++ b/src/pages/services/commercial-ice-machine-repair-los-angeles.astro
@@ -16,7 +16,7 @@ import "css/service/style_services.css";
 
 <Navbar />
 <Reviews />
-<Layout title="Ice Machine Repair">
+<Layout title="Commercial Ice Machine Repair Los Angeles">
   <Container>
     <main>
       <div class="page-header">
