--- a/src/pages/services/commercial-walk-in-cooler-repair-los-angeles.astro
+++ b/src/pages/services/commercial-walk-in-cooler-repair-los-angeles.astro
@@ -16,7 +16,7 @@ import "css/service/style_services.css";
 
 <Navbar />
 <Reviews />
-<Layout title="Walk-in Cooler Repair">
+<Layout title="Walk in Cooler Repair Los Angeles">
   <Container>
     <main>
       <div class="page-header">
