--- a/src/pages/services/induction-cooktop-repair-los-angeles.astro
+++ b/src/pages/services/induction-cooktop-repair-los-angeles.astro
@@ -14,7 +14,7 @@ import LogoBrands from "@components/js/logo-brands.astro";
 
 <Navbar />
 <Reviews />
-<Layout title="Induction Cooktop Repair">
+<Layout title="Induction Cooktop Repair Los Angeles">
   <Container></Container>
 
 <h1>Induction Cooktop Repair</h1>
