--- a/src/pages/services/bar-refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/bar-refrigerator-repair-los-angeles.astro
@@ -16,7 +16,7 @@ import "css/service/style_services.css";
 
 <Navbar />
 <Reviews />
-<Layout title="Bar Refrigerator Repair">
+<Layout title="Bar Refrigerator Repair Los Angeles">
   <Container>
     <main>
       <div class="page-header">
