--- a/src/pages/services/commercial-dryer-repair-los-angeles.astro
+++ b/src/pages/services/commercial-dryer-repair-los-angeles.astro
@@ -16,7 +16,7 @@ import "css/service/style_services.css";
 
 <Navbar />
 <Reviews />
-<Layout title="Commercial Dryer Repair">
+<Layout title="Commercial Dryer Repair Los Angeles">
   <Container>
     <main>
       <div class="page-header">
