--- a/src/pages/services/commercial-refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/commercial-refrigerator-repair-los-angeles.astro
@@ -14,7 +14,7 @@ import "css/service/style_services.css";
 
 <Navbar />
 <Reviews />
-<Layout title="Same Day Commercial Refrigerator Repair">
+<Layout title="Same Day Commercial Refrigerator Repair Los Angeles">
   <Container>
     <div class="content">
       <h1 class="top">
