--- a/src/pages/services/range-hood-repair-los-angeles.astro
+++ b/src/pages/services/range-hood-repair-los-angeles.astro
@@ -14,7 +14,7 @@ import "css/service/style_services.css";
 
 <Navbar />
 <Reviews />
-<Layout title="Same Day Range Hood Range Repair">
+<Layout title="Same Day Range Hood Range Repair Los Angeles">
   <Container>
     <main>
       <h1>
