--- a/src/components/units-appliances-pasadena.astro
+++ b/src/components/units-appliances-pasadena.astro
@@ -8,14 +8,9 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="content-machinery-f-d">
       <a
         title="Refrigerator Repair Pasadena"
-        href="/services/refrigerator-repair">
+        href="/services/refrigerator-repair-los-angeles">
         <div class="f-content-machinery">
-          <img
-        
-            loading="lazy"
-            src="/units/refrigerator-repair.webp"
-            alt="Same day expert refrigerator repair - Pasadena"
-          />
+          <img loading="lazy" src="/units/refrigerator-repair.webp" alt="Same day expert refrigerator repair - Pasadena" />
         </div>
 
         <div class="d-content-machinery">
@@ -30,16 +25,17 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/refrigerator-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/refrigerator-repair-cost">ESTIMATES</a>
     </div>
 
   </div>
+
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
       <a
         title="Refrigerator Repair Pasadena"
-        href="/services/freezer-repair">
+        href="/services/freezer-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -60,7 +56,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/freezer-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/freezer-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
@@ -70,7 +66,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="content-machinery-f-d">
       <a
         title="Refrigerator Repair Pasadena"
-        href="/services/washing-machine-repair">
+        href="/services/washing-machine-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -98,7 +94,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Refrigerator Repair Pasadena" href="/services/dryer-repair">
+      <a title="Refrigerator Repair Pasadena" href="/services/dryer-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -119,24 +115,24 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/dryer-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/dryer-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Stove Repair Pasadena" href="/services/stove-repair">
+      <a title="Stove Repair Pasadena" href="/services/stove-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
             src="/units/range-stove-repair.webp"
-            alt="Range repair Pasadena / Stove repair Pasadena"
+            alt="Stove repair Pasadena"
           />
         </div>
 
         <div class="d-content-machinery">
-          <p>Range/Stove Repair</p>
+          <p>Stove Repair</p>
         </div>
       </a>
     </div>
@@ -147,7 +143,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/stove-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/stove-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
@@ -157,7 +153,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="content-machinery-f-d">
       <a
         title="Dishwasher Repair Pasadena"
-        href="/services/dishwasher-repair">
+        href="/services/dishwasher-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -178,7 +174,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/dishwasher-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/dishwasher-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
@@ -186,7 +182,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Oven Repair Pasadena" href="/services/oven-repair">
+      <a title="Oven Repair Pasadena" href="/services/oven-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -206,7 +202,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/oven-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/oven-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
@@ -214,7 +210,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Cooktop Repair Pasadena" href="/services/cooktop-repair">
+      <a title="Cooktop Repair Pasadena" href="/services/cooktop-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -235,16 +231,15 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/cooktop-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/cooktop-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
 
 
-
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Microwave Repair Pasadena" href="/services/microwave-repair">
+      <a title="Microwave Repair Pasadena" href="/services/microwave-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -265,7 +260,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/microwave-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/microwave-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
@@ -275,7 +270,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="content-machinery-f-d">
       <a
         title="Range Hood Repair Pasadena"
-        href="/services/range-hood-repair">
+        href="/services/range-hood-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -296,7 +291,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/range-hood-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/range-hood-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
@@ -304,7 +299,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Fireplace Repair Pasadena" href="/services/fireplace-repair">
+      <a title="Fireplace Repair Pasadena" href="/services/fireplace-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -325,7 +320,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/fireplace-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/fireplace-repair-cost">ESTIMATES</a>
     </div>
 
   </div>
@@ -334,17 +329,17 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Fireplace Repair Pasadena" href="/services/bbq-grill-repair">
+      <a title="Fireplace Repair Pasadena" href="/services/bbq-grill-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
             src="/units/bbq-grill-repair.webp"
-            alt="BBQ grill repair Pasadena"
+            alt="Barbeque grill repair Pasadena"
           />
         </div>
 
         <div class="d-content-machinery">
-          <p>BBQ Grill Repair</p>
+          <p>Barbeque Grill Repair</p>
         </div>
       </a>
     </div>
@@ -355,7 +350,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/bbq-grill-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/bbq-grill-repair-cost">ESTIMATES</a>
     </div>
 
   </div>
@@ -364,7 +359,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Wine Cooler Repair in Pasadena" href="/services/wine-cooler-repair">
+      <a title="Wine Cooler Repair in Pasadena" href="/services/wine-cooler-repair-los-angeles">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -384,14 +379,14 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/wine-cooler-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/commercial-wine-cooler-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Wine Cellar Repair in Pasadena" href="/services/wine-cellar-repair">
+      <a title="Wine Cellar Repair in Pasadena" href="/services/wine-cellar-repair-los-angeles">
         <div class="f-content-machinery">
           <img
           loading="lazy"
@@ -412,7 +407,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/wine-cellar-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/wine-cellar-repair-los-angeles">ESTIMATES</a>
     </div>
   </div>
 
@@ -420,7 +415,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Induction Cooktop Repair in Pasadena" href="/services/induction-cooktop-repair">
+      <a title="Induction Cooktop Repair in Pasadena" href="/services/induction-cooktop-repair-los-angeles">
         <div class="f-content-machinery">
           <img
           loading="lazy"
@@ -441,7 +436,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/induction-cooktop-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/induction-cooktop-repair-los-angeles">ESTIMATES</a>
     </div>
   </div>
 
