--- a/src/components/units-commercial-equipment-pasadena.astro
+++ b/src/components/units-commercial-equipment-pasadena.astro
@@ -14,7 +14,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="d-content-machinery">
-      <p>Refrigerator Repair</p>
+      <p>Commercial Refrigerator Repair</p>
     </div>
 
     <div class="but-content-machinery">
@@ -23,7 +23,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/commercial-refrigerator-repair-los-angeles">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/commercial-refrigerator-repair-cost">ESTIMATES</a>
     </div>
     
   </div>
@@ -38,7 +38,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="d-content-machinery">
-      <p>Freezer Repair</p>
+      <p>Commercial Freezer Repair</p>
     </div>
 
     <div class="but-content-machinery">
@@ -48,7 +48,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/commercial-freezer-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/commercial-freezer-repair-cost">ESTIMATES</a>
     </div>
 
   </div>
@@ -58,12 +58,12 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <img
         loading="lazy"
         src="/units/commercial-washer-repair.webp"
-        alt="Commercial washer repair Pasadena"
+        alt="Commercial washing machine repair Pasadena"
       />
     </div>
 
     <div class="d-content-machinery">
-      <p>Washer Repair</p>
+      <p>Commercial Washing Machine Repair</p>
     </div>
 
     <div class="but-content-machinery">
@@ -71,7 +71,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/washing-machine-repair-los-angeles">ESTIMATES</a>
     </div>
 
   </div>
@@ -86,7 +86,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="d-content-machinery">
-      <p>Dryer Repair</p>
+      <p>Commercial Dryer Repair</p>
     </div>
 
     <div class="but-content-machinery">
@@ -94,7 +94,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/commercial-dryer-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/commercial-dryer-repair-cost">ESTIMATES</a>
     </div>
 
   </div>
@@ -109,7 +109,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="d-content-machinery">
-      <p>Stove Repair</p>
+      <p>Commercial Stove Repair</p>
     </div>
 
     <div class="but-content-machinery">
@@ -117,7 +117,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/commercial-stove-repair-cost">ESTIMATES</a>
     </div>
 
   </div>
@@ -132,15 +132,15 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="d-content-machinery">
-      <p>Dishwasher Repair</p>
+      <p>Commercial Dishwasher Repair</p>
     </div>
 
     <div class="but-content-machinery">
-      <a title="Same day dishwasher repair Pasadena" href="/book">BOOK US</a>
+      <a title="Commercial dishwasher repair Pasadena" href="/book">BOOK US</a>
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="/services/commercial-dishwasher-repair">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/commercial-dishwasher-repair-cost">ESTIMATES</a>
     </div>
 
   </div>
@@ -155,7 +155,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="d-content-machinery">
-      <p>Oven Repair</p>
+      <p>Commercial Oven Repair</p>
     </div>
 
     <div class="but-content-machinery">
@@ -163,7 +163,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/commercial-oven-repair-cost">ESTIMATES</a>
     </div>
 
   </div>
@@ -173,22 +173,22 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <img
         loading="lazy"
         src="/units/walk-in-cooler-repair.webp"
-        alt="Commercial walk-in cooler repair Pasadena"
+        alt="Commercial walk in cooler repair Pasadena"
       />
     </div>
 
     <div class="d-content-machinery">
-      <p>Walk-in cooler Repair</p>
+      <p>Walk in cooler Repair</p>
     </div>
 
     <div class="but-content-machinery">
-      <a title="Walk-in cooler repair Pasadena" href="/book"
+      <a title="Walk in cooler repair Pasadena" href="/book"
         >BOOK US</a
       >
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/commercial-walk-in-cooler-repair-cost">ESTIMATES</a>
     </div>
 
   </div>
@@ -198,12 +198,12 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <img
         loading="lazy"
         src="/units/walk-in-freezer-repair.webp"
-        alt="Commercial walk-in freezer repair Pasadena"
+        alt="Commercial walk in freezer repair Pasadena"
       />
     </div>
 
     <div class="d-content-machinery">
-      <p>Walk-in freezer Repair</p>
+      <p>Walk in freezer Repair</p>
     </div>
 
     <div class="but-content-machinery">
@@ -213,7 +213,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/commercial-walk-in-freezer-repair-cost">ESTIMATES</a>
     </div>
 
   </div>
@@ -228,7 +228,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="d-content-machinery">
-      <p>Ice machine Repair</p>
+      <p>Commercial Ice machine Repair</p>
     </div>
 
     <div class="but-content-machinery">
@@ -237,7 +237,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/commercial-ice-machine-repair-cost">ESTIMATES</a>
     </div>
 
   </div>
@@ -262,7 +262,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/commercial-slushie-machine-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
@@ -287,7 +287,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/price-list/commercial-showcase-refrigerator-repair-cost">ESTIMATES</a>
     </div>
   </div>
 
@@ -312,7 +312,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
 
     <div class="but-content-machinery but-content-machinery-estimates">
-      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/bar-refrigerator-repair-los-angeles">ESTIMATES</a>
     </div>
   </div>
 
@@ -321,12 +321,12 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <img
         loading="lazy"
         src="/units/commercial-fryer-repair.webp"
-        alt="Commercial Fryer Repair Pasadena"
+        alt="Commercial Fryer Machine Repair Pasadena"
       />
     </div>
 
     <div class="d-content-machinery">
-      <p>Commercial Fryer Repair</p>
+      <p>Commercial Fryer Machine Repair</p>
     </div>
 
     <div class="but-content-machinery">
@@ -343,12 +343,12 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <img
         loading="lazy"
         src="/units/laundry-speed-queen-repair.webp"
-        alt="Laundry Speed Queen Repair Pasadena"
+        alt="Commercial Laundry Repair Pasadena"
       />
     </div>
 
     <div class="d-content-machinery">
-      <p>Laundry Speed Queen Repair</p>
+      <p>Commercial Laundry Repair</p>
     </div>
 
     <div class="but-content-machinery">
