--- a/src/pages/services/refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/refrigerator-repair-los-angeles.astro
@@ -10,6 +10,7 @@ import Arrow from "@components/js/arrow-phone.astro";
 import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
+import ContactForm from "@components/contact-form.astro";
 
 import "css/service/style_services-test.css";
 ---
@@ -92,7 +93,7 @@ import "css/service/style_services-test.css";
       <div class="full_left_menu_r">
         <div class="list_left">
           <a href="#left-menu-1">
-            <h2>Refrigerator Repair</h2>
+            <h2>Contact Form</h2>
           </a>
         </div>
 
@@ -184,9 +185,7 @@ import "css/service/style_services-test.css";
       <div class="page213-container">
         <div class="page213-content" id="left-menu-1">
           <div class="content__page-desc">
-            <p>
-             форма 
-          </p>
+            <ContactForm />
           </div>
         </div>
 
