--- a/src/components/contact-form.astro
+++ b/src/components/contact-form.astro
@@ -1,6 +1,4 @@
 ---
-
-
 import "components/css-components/style-contact-form.css";
 ---
 
@@ -15,6 +13,7 @@ import "components/css-components/style-contact-form.css";
         <div class="slides">
           <div class="slide">
             <img
+              loading="lazy"
               alt="Same Day Appliance Repair"
               src="/images/same-day-appliance-repair-experts.webp"
             />
@@ -22,12 +21,14 @@ import "components/css-components/style-contact-form.css";
 
           <div class="slide">
             <img
+              loading="lazy"
               alt="Same Day Appliance Repair"
               src="/img-price/oven-repair-cost/oven-repair-cost-1.webp"
             />
           </div>
           <div class="slide">
             <img
+              loading="lazy"
               alt="Same Day Appliance Repair"
               src="/img-price/refrigerator-repair-cost/refrigerator-repair-cost-1.webp"
             />
